# ChangeLog for sys-apps/attr
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/attr/ChangeLog,v 1.127 2011/05/16 06:06:00 vapier Exp $

  16 May 2011; Mike Frysinger <vapier@gentoo.org> attr-2.4.46.ebuild,
  +files/attr-2.4.46-config-shell.patch:
  Fix building when /bin/sh is not functional enough #366671 by Alec Moskvin.

*attr-2.4.46 (09 May 2011)

  09 May 2011; Mike Frysinger <vapier@gentoo.org> +attr-2.4.46.ebuild:
  Version bump.

*attr-2.4.44-r1 (15 Apr 2011)

  15 Apr 2011; Diego E. Pettenò <flameeyes@gentoo.org> +attr-2.4.44-r1.ebuild:
  Revision bump: port to EAPI=4, drop prepalldocs, add static-libs USE flag,
  drop .la files if static-libs are disabled.

  05 Dec 2010; Raúl Porcel <armin76@gentoo.org> attr-2.4.44.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #346455

  29 Nov 2010; Brent Baude <ranger@gentoo.org> attr-2.4.44.ebuild:
  stable ppc64, bug 346455

  28 Nov 2010; Markus Meier <maekke@gentoo.org> attr-2.4.44.ebuild:
  arm/x86 stable, bug #346455

  28 Nov 2010; Markos Chandras <hwoarang@gentoo.org> attr-2.4.44.ebuild:
  Stable on amd64 wrt bug #346455

  27 Nov 2010; nixnut <nixnut@gentoo.org> attr-2.4.44.ebuild:
  ppc stable #346455

  26 Nov 2010; Jeroen Roovers <jer@gentoo.org> attr-2.4.44.ebuild:
  Stable for HPPA (bug #346455).

*attr-2.4.44 (08 Jun 2010)

  08 Jun 2010; Mike Frysinger <vapier@gentoo.org> +attr-2.4.44.ebuild,
  +files/attr-2.4.44-gettext.patch, +files/attr-2.4.44-headers.patch:
  Version bump #292840 by Mr. Anderson and Michał Górny.

  06 Mar 2009; Jeroen Roovers <jer@gentoo.org> attr-2.4.43.ebuild:
  Stable for HPPA (bug #259431).

  02 Mar 2009; Raúl Porcel <armin76@gentoo.org> attr-2.4.43.ebuild:
  arm/ia64/s390/sh/x86 stable wrt #259431

  25 Feb 2009; Joseph Jezak <josejx@gentoo.org> attr-2.4.43.ebuild:
  Marked ppc stable for bug #259431.

  24 Feb 2009; Thomas Anderson <gentoofan23@gentoo.org> attr-2.4.43.ebuild:
  stable amd64, bug 259431
