@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/attr/attr-2.4.46.ebuild,v 1.2 2011/05/16 06:06:00 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/attr/attr-2.4.46.ebuild,v 1.3 2011/05/16 20:34:44 vapier Exp $
 
 EAPI="4"
 
@@ -27,7 +27,7 @@ src_prepare() {
 		-e '/HAVE_ZIPPED_MANPAGES/s:=.*:=false:' \
 		include/builddefs.in \
 		|| die "failed to update builddefs"
-	strip-linguas po
+	strip-linguas -u po
 }
 
 src_configure() {
