@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/attr
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/attr/ChangeLog,v 1.127 2011/05/16 06:06:00 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/attr/ChangeLog,v 1.128 2011/05/16 20:34:44 vapier Exp $
+
+  16 May 2011; Mike Frysinger <vapier@gentoo.org> attr-2.4.43.ebuild,
+  attr-2.4.44.ebuild, attr-2.4.44-r1.ebuild, attr-2.4.46.ebuild:
+  Fix by Petr Pisar for strip-linguas call #217153.
 
   16 May 2011; Mike Frysinger <vapier@gentoo.org> attr-2.4.46.ebuild,
   +files/attr-2.4.46-config-shell.patch:
